editing now dynamic, tab bar added for sphere selection, string overflow on captions fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -377,7 +377,12 @@ input{
 
 	#shareSelection li{
 		display: inline;
-		padding:30px;
+		padding-left:25px;
+		padding-right:25px;
+	}
+
+	#shareSelection li.active{
+		border-bottom: 3px solid #428bca;
 	}
 
 	#shareRecipients li{
